migration/1-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo
  name: demo
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          image: mccutchen/go-httpbin
